tests/parsing/bad_function.june
// error: use 'fun' instead of 'fn' to create a function

fn foo() {}